manifests/gitea/deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea
  namespace: gitea
spec:
  serviceName: gitea
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
        name: gitea
        mariadb-client: "true"
    spec:
      restartPolicy: Always
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
              - key: kubernetes.io/arch
                operator: In
                values: 
                - "amd64"
      containers:
      - name: gitea
        image: docker.io/gitea/gitea:1.23.3-rootless
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 1000
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop: ["ALL"]
        resources:
          requests:
            cpu: 3m
            memory: 250Mi
          limits:
            # cpu: 300m
            memory: 350Mi
        ports:
        - containerPort: 3000
          name: http
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 45
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 45
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: gitea-data
          mountPath: /var/lib/gitea
        - name: gitea-config
          mountPath: /etc/gitea
      dnsConfig:
        options:
        - name: ndots
          value: "1"
      volumes:
      - name: gitea-data
        persistentVolumeClaim:
          claimName: nfs-gitea-data
      - name: gitea-config
        persistentVolumeClaim:
          claimName: nfs-gitea-config
