manifests/gitea/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea
  namespace: gitea
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "gitea.ucdialplans.com"
  rules:
  - backendRefs:
    - name: gitea-http
      namespace: gitea
      kind: Service
      port: 3000
